--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ main {
     & .imgContainer img {
       width: 100%;
       height: 330px;
-      margin-top: 10px;
+      margin: 15px 0;
 
       & img {
         width: 100%;
